[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptainer"
version = "0.0.3"
description = "A python wrapper to manage encrypted volumes (gocryptfs, veracrypt, ...)"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Simon Juhel", email = "null@none.com"}
]
dependencies = [
    "colorama",
    "argcomplete",
    "tabulate"
]

[tool.setuptools.package-data]
"cryptainer" = ["data/*"]

[project.scripts]
cryptainer = "cryptainer.cli:main"
